--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   max-width: 850px;
   max-height:1200px ;
   margin: auto;
-  border: 1px solid;
+/*   border: 1px solid; */
 }
 
 .camera-container {
@@ -11,7 +11,7 @@
   width: 600px;  
   height: auto; 
   margin: 20px auto;
-  border: 2px solid blue ;
+  border: 2px solid #ccc ;
   border-radius: 10px;
   /* overflow: hidden;   */
   background-color: #ccc;
@@ -19,7 +19,7 @@
 
 .video-wrapper {
   position: relative;
-  border: 2px solid red;
+/*   border: 2px solid red; */
   width: 100%;
   height: 90%;
   /* display: flex; */
@@ -63,7 +63,7 @@ video {
   left: 0;
   width: 100%;
   display: flex;
-  border: 1px solid;
+/*   border: 1px solid; */
   justify-content: center;
   z-index: 10;  
 }
