--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,7 @@ input[type="range"] {
   }
   .video-wrapper {
   position: relative;
-  border: 2px solid red;
+/*   border: 2px solid red; */
   width: 100%;
   height: 80%;
   /* display: flex; */
