--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@
 .video-wrapper {
   position: relative;
 /*   border: 2px solid red; */
-  width: 100%;
-  height: 90%;
+/*   width: 100%; */
+  height: 80%;
   /* display: flex; */
   justify-content: center;
   object-fit: cover;
