--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .camera-container {
   position: relative;
-  width: 600px;  
+  width: 650px;  
   height: auto; 
   margin: 20px auto;
   border: 2px solid #ccc ;
@@ -20,7 +20,7 @@
 .video-wrapper {
   position: relative;
 /*   border: 2px solid red; */
-  width: 100%;
+  width: auto;
   height: 80%;
   /* display: flex; */
   justify-content: center;
